src/style.css
body,
html {
  height: 100%;
  margin: 0;
}
.mainContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
}
#boardContainer {
  background-color: black;
  display: grid;
  grid-template-columns: repeat(8, 50px);
  grid-template-rows: repeat(8, 50px);
  gap: 5px;
  border: #000 solid 1rem;
}
.square {
  width: 50px;
  height: 50px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 30px;
  cursor: pointer;
}
.dark {
  background-color: brown;
}

.light {
  background-color: beige;
}
.red.king {
  background-color: darkred;
}
.black.king {
  background-color: gray;
}
.piece {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}
.red {
  background-color: red;
  border: #000 solid 2px;
}

.black {
  background-color: black;
}

html, body {
  height: 100%;
  margin: 0;
  padding: 0;
}

body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  background-color: #808080;
}

.title {
  font-family: sans-serif;
  font-weight: bold;
  font-size: larger;
  color: #FFF2F2;
  text-align: center;
  margin: 0;
  padding: 3rem;
  background-color: #212121;
}

.skeleton {
  display: flex;
  justify-content: center;
  align-items: top;
  padding: 2rem;
}

.center {
  text-align: center;
  align-items: center;
  display: flex;
  flex-wrap: wrap;
}

.board {
  max-width: fit-content;
  display: flex;
  margin: 20px auto;
}

.image {
  width: auto;
  text-align: center;
  align-items: center;
  display: flex;
  flex-wrap: wrap;
}

.container {
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 20px;
}

footer {
  background-color: #424242;
  width: 100%;
  padding: 1rem 0;
  margin-top: auto;
  display: flex;
  text-align: center;
  margin-bottom: auto;
  position: relative;
}

.footer {
  display: flex;
  flex-wrap: wrap;

}

.footer-content {
  text-align: center;
  color: #FFF2F2;
  padding: 1rem;
}

.game-info {
  text-align: center;
  align-items:center;
  padding: 1rem;
  color: #FFF2F2;
  display: flex;
  flex-direction: column;
}

.box {
  width: 350px;
  height: 300px;
  border: 2px solid #000;
  justify-content: center;
  align-items: center;
  font-size: 2rem;
  margin: 2rem;
}

.box-settings {
  width: 350px;
  height: 300px;
  width: 400px;
  height: 150px;
  border: 2px solid #000;
  justify-content: center;
  align-items: center;
  font-size: 2rem;
  margin: 2rem;
}

.box-container {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 2rem;
}

.toolbar {
  display: flex;
  justify-content: center;
  margin-bottom: 1rem;
  cursor: pointer;
}

.button {
  padding: 0.5rem 1rem;
  font-size: 1rem;
  cursor: pointer;
  margin: 0 0.5rem;
  background-color: #4681f4;
  color: aliceblue;
  border: none;
  transition-duration: 0.3s;
  border-radius: 6px;
}

.button:hover {
  background-color: #5783db;
}

.button:active {
  background-color: #55c2da;
  box-shadow: 0 5px #666;
  transform: translateY(4px);
}

select{
  cursor: pointer;
}

